# CQClaw-New

./: .gitignore  README.md  install-windows.bat  install.ps1  install.sh  requirements-ocr.txt  requirements.txt  server.py  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  app_assets.py  legacy_core.py
data/: adb_script_snippets.json  settings.json
data/agent/: README.md
desktop/: cqclaw_client.py  launch-client.ps1  launch-client.vbs
desktop/tauri-client/: index.html  package-lock.json  package.json  styles.css
desktop/tauri-client/src/: main.js
desktop/tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri-client/src-tauri/src/: main.rs
docs/: cqclaw-product-intro.html  cqclaw-roadshow-introduction-short.md  cqclaw-roadshow-introduction.md
docs/requirements/: 2026-06-04-performance-monitoring.md
packaging/macos/: install-cqclaw.command
packaging/windows/: CQClaw-Setup.bat  CQClaw.iss  build-inno.ps1  install-cqclaw.ps1  postinstall-inno.ps1
skills/cqclaw-android-automation/: SKILL.md
static/: automation.html  device-manager.html  dump.html  index.html  log-insight.html  settings.html  storage-center.html
static/css/: app.css  tokens.css
static/css/components/: icons.css  (+2 more)
static/js/: api.js  dashboard.js  device.js  dump-inspector.js  log-insight.js  settings-page.js  snippets.js  state.js  theme-manager.js  theme.js  workflow.js
static/styles/: log-insight.css
tools/: aas_cli.py  cqclaw_updater.py  generate_release_manifest.py  generate_tauri_icon.cjs  package_release.py
(+39 files in other folders)
