[package]
name = "cqclaw-client"
version = "1.0.6"
description = "CQClaw desktop client"
authors = ["CQClaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.6", features = ["tray-icon"] }
